gl: windows: Also look for glBindFramebuffer when testing for OpenGL 2+

Fixes: QTBUG-124302
Change-Id: I26b9bbd8e65261a1a628dee70757aab84e6ace7c
Reviewed-by: Andy Nichols <andy.nichols@qt.io>